# skybreaker

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
bpmn/: simple_get.bpmn  simple_pizza.bpmn  simple_transcribe.bpmn  transcription-supervisor.bpmn
camunda-workers/: calculate-pizza-order.py  transcribe-recording.py
config/: settings.py  urls.py
docs/: deploy.md  garden-plan.md
garden/: admin.py  forms.py  models.py  urls.py  views.py
garden/migrations/: 0001_initial.py  0002_initial.py  0003_plant_notes.py
services/transcription_discovery/: cache.py  django_client.py  scanner.py  service.py  settings.py
soil/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
soil/migrations/: 0001_initial.py
templates/: base.html
templates/garden/: plant_confirm_delete.html  plant_detail.html  plant_form.html  plant_list.html
templates/soil/: component_form.html  component_list.html  plant_soil_form.html  plant_soil_history.html
templates/timeline/: page_detail.html  restricted.html
templates/users/: login.html  signup.html
timeline/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
timeline/migrations/: 0001_initial.py  0002_require_event_date.py  0003_simplify_timeline_models.py  0004_alter_timeline_options_alter_timelineevent_options_and_more.py  0005_timeline_owner_only.py
transcription/: admin.py  apps.py  models.py  serializers.py  tests.py  tests_discovery_service.py  tests_transcribe_worker.py  urls.py  views.py
users/: forms.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+5 files in other folders)
