[tool.poetry]
name = "skybreaker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.5"
pillow = "^11.0.0"
gunicorn = "^26.0.0"
psycopg = {extras = ["binary"], version = "^3.3.4"}
dj-database-url = "^3.1.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
